--- a/ShibugakiViewer/Views/Windows/VersionWindow.xaml
+++ b/ShibugakiViewer/Views/Windows/VersionWindow.xaml
@@ -113,7 +113,7 @@
                         </TextBlock>
 
                         <!-- Hardcodet WPF NotifyIcon -->
-                        <TextBlock Style="{StaticResource titleTextStyle}">
+                        <!--<TextBlock Style="{StaticResource titleTextStyle}">
                             <Hyperlink NavigateUri="http://www.hardcodet.net/wpf-notifyicon"
                                        tb:HyperlinkBehavior.NavigateByClick="True">
                                 <Run Text="Hardcodet WPF NotifyIcon" FontWeight="Bold"/>
@@ -123,7 +123,7 @@
                                        tb:HyperlinkBehavior.NavigateByClick="True">
                                 <Run Text="The Code Project Open License"/>
                             </Hyperlink>
-                        </TextBlock>
+                        </TextBlock>-->
                         
                         <!-- Material Icons -->
                         <TextBlock Style="{StaticResource titleTextStyle}">
