--- a/ShibugakiViewer/Views/Resources/Constants.xaml
+++ b/ShibugakiViewer/Views/Resources/Constants.xaml
@@ -101,72 +101,73 @@
     <system:String x:Key="ZoomSymbol">&#xE8A3;</system:String>-->
 
 
-    <FontFamily x:Key="SymbolFont">/ShibugakiViewer;component/Assets/Fonts/#Material Icons</FontFamily>
+    <!--<FontFamily x:Key="SymbolFont">/ShibugakiViewer;component/Assets/Fonts/#Material Icons</FontFamily>-->
+    <FontFamily x:Key="SymbolFont">/ShibugakiViewer;component/Assets/Fonts/#Material Design Icons</FontFamily>
 
-    <system:String x:Key="EditSymbol">&#xE22B;</system:String>
-    <system:String x:Key="SwitchSymbol">&#xE8D4;</system:String>
-    <system:String x:Key="AddSymbol">&#xE145;</system:String>
-    <system:String x:Key="RemoveSymbol">&#xE14C;</system:String>
-    <system:String x:Key="BackSymbol">&#xE5C4;</system:String>
-    <system:String x:Key="MenuSymbol">&#xE5D2;</system:String>
-    <system:String x:Key="InformationSymbol">&#xE88F;</system:String>
-    <system:String x:Key="SearchSymbol">&#xE8B6;</system:String>
-    <system:String x:Key="SettingSymbol">&#xE8B8;</system:String>
-    <system:String x:Key="PinSymbol">&#xE0C8;</system:String>
-    <system:String x:Key="MessageSymbol">&#xE0CB;</system:String>
+    <system:String x:Key="EditSymbol">&#xf64f;</system:String>
+    <system:String x:Key="SwitchSymbol">&#xf4e1;</system:String>
+    <system:String x:Key="AddSymbol">&#xf415;</system:String>
+    <system:String x:Key="RemoveSymbol">&#xf5ad;</system:String>
+    <system:String x:Key="BackSymbol">&#xf04d;</system:String>
+    <system:String x:Key="MenuSymbol">&#xf35c;</system:String>
+    <system:String x:Key="InformationSymbol">&#xf2fd;</system:String>
+    <system:String x:Key="SearchSymbol">&#xf349;</system:String>
+    <system:String x:Key="SettingSymbol">&#xf493;</system:String>
+    <system:String x:Key="PinSymbol">&#xf403;</system:String>
+    <system:String x:Key="MessageSymbol">&#xf36a;</system:String>
 
-    <system:String x:Key="TreeOpenSymbol">&#xE5CC;</system:String>
-    <system:String x:Key="TreeCloseSymbol">&#xE5CF;</system:String>
+    <system:String x:Key="TreeOpenSymbol">&#xf142;</system:String>
+    <system:String x:Key="TreeCloseSymbol">&#xf140;</system:String>
 
-    <system:String x:Key="UpSymbol">&#xE5CE;</system:String>
-    <system:String x:Key="DownSymbol">&#xE5CF;</system:String>
+    <system:String x:Key="UpSymbol">&#xf143;</system:String>
+    <system:String x:Key="DownSymbol">&#xf140;</system:String>
 
-    <system:String x:Key="UpArSymbol">&#xE5D8;</system:String>
-    <system:String x:Key="DownArSymbol">&#xE5DB;</system:String>
-    <system:String x:Key="LeftArSymbol">&#xE5C4;</system:String>
-    <system:String x:Key="RightArSymbol">&#xE5C8;</system:String>
-    <system:String x:Key="AllArSymbol">&#xE5C4;&#xE5D8;&#xE5DB;&#xE5C8;</system:String>
-
-
-    <system:String x:Key="DescSymbol">&#xE164;</system:String>
-
-    <system:String x:Key="StarSymbol">&#xE838;</system:String>
-    <system:String x:Key="StarBorderSymbol">&#xE83A;</system:String>
-    <system:String x:Key="UnStarSymbol">&#xE83A;</system:String>
-    <system:String x:Key="HistorySymbol">&#xE192;</system:String>
-
-    <system:String x:Key="TagSymbol">&#xE54E;</system:String>
-    <system:String x:Key="FileSymbol">&#xE24D;</system:String>
-
-    <system:String x:Key="RefreshSymbol">&#xE86A;</system:String>
-    <system:String x:Key="QuestionSymbol">&#xE8FD;</system:String>
-    <system:String x:Key="KeyboardSymbol">&#xE312;</system:String>
-
-    <system:String x:Key="SelectAllSymbol">&#xE228;</system:String>
-    <system:String x:Key="ClearSelectionSymbol">&#xE22A;</system:String>
-
-    <system:String x:Key="SortSymbol">&#xE8D5;</system:String>
-
-    <system:String x:Key="GroupingSymbol">&#xE7EF;</system:String>
-    <system:String x:Key="ThumbnailSymbol">&#xE416;</system:String>
-    <system:String x:Key="RemoveGroupSymbol">&#xE7FF;</system:String>
-    <system:String x:Key="UndoSymbol">&#xE166;</system:String>
-
-    <system:String x:Key="RotateSymbol">&#xE428;</system:String>
-    <system:String x:Key="SlideshowSymbol">&#xE037;</system:String>
-
-    <system:String x:Key="PlaySymbol">&#xE037;</system:String>
-    <system:String x:Key="StopSymbol">&#xE047;</system:String>
-    <system:String x:Key="PauseSymbol">&#xE034;</system:String>
-    <system:String x:Key="PrevSymbol">&#xE045;</system:String>
-    <system:String x:Key="NextSymbol">&#xE044;</system:String>
-    <system:String x:Key="ShuffleSymbol">&#xE043;</system:String>
+    <system:String x:Key="UpArSymbol">&#xf05d;</system:String>
+    <system:String x:Key="DownArSymbol">&#xf045;</system:String>
+    <system:String x:Key="LeftArSymbol">&#xf04d;</system:String>
+    <system:String x:Key="RightArSymbol">&#xf054;</system:String>
+    <system:String x:Key="AllArSymbol">&#xf04d;&#xf05d;&#xf045;&#xf054;</system:String>
 
 
-    <system:String x:Key="TurnCcwSymbol">&#xE042;</system:String>
-    <system:String x:Key="FlipHorizontalSymbol">&#xE8D4;</system:String>
-    <system:String x:Key="ZoomSymbol">&#xE8B6;</system:String>
-    <system:String x:Key="ImportSymbol">&#xE890;</system:String>
+    <system:String x:Key="DescSymbol">&#xf4bf;</system:String>
+
+    <system:String x:Key="StarSymbol">&#xf4ce;</system:String>
+    <system:String x:Key="StarBorderSymbol">&#xf4d2;</system:String>
+    <system:String x:Key="UnStarSymbol">&#xf4d1;</system:String>
+    <system:String x:Key="HistorySymbol">&#xf150;</system:String>
+
+    <system:String x:Key="TagSymbol">&#xf4fb;</system:String>
+    <system:String x:Key="FileSymbol">&#xf224;</system:String>
+
+    <system:String x:Key="RefreshSymbol">&#xf0e8;</system:String>
+    <system:String x:Key="QuestionSymbol">&#xf2d6;</system:String>
+    <system:String x:Key="KeyboardSymbol">&#xf30c;</system:String>
+
+    <system:String x:Key="SelectAllSymbol">&#xf0c7;</system:String>
+    <system:String x:Key="ClearSelectionSymbol">&#xf0cd;</system:String>
+
+    <system:String x:Key="SortSymbol">&#xf4e2;</system:String>
+
+    <system:String x:Key="GroupingSymbol">&#xf00e;</system:String>
+    <system:String x:Key="ThumbnailSymbol">&#xf007;</system:String>
+    <system:String x:Key="RemoveGroupSymbol">&#xf012;</system:String>
+    <system:String x:Key="UndoSymbol">&#xf54c;</system:String>
+
+    <system:String x:Key="RotateSymbol">&#xf542;</system:String>
+    <system:String x:Key="SlideshowSymbol">&#xf40a;</system:String>
+
+    <system:String x:Key="PlaySymbol">&#xf40a;</system:String>
+    <system:String x:Key="StopSymbol">&#xf4db;</system:String>
+    <system:String x:Key="PauseSymbol">&#xf3e4;</system:String>
+    <system:String x:Key="PrevSymbol">&#xf4d5;</system:String>
+    <system:String x:Key="NextSymbol">&#xf4d7;</system:String>
+    <system:String x:Key="ShuffleSymbol">&#xf49d;</system:String>
+
+
+    <system:String x:Key="TurnCcwSymbol">&#xf459;</system:String>
+    <system:String x:Key="FlipHorizontalSymbol">&#xf4e1;</system:String>
+    <system:String x:Key="ZoomSymbol">&#xf349;</system:String>
+    <system:String x:Key="ImportSymbol">&#xf2fa;</system:String>
 
 
     <!--
