--- a/ShibugakiViewer/Views/Windows/ClientWindow.xaml
+++ b/ShibugakiViewer/Views/Windows/ClientWindow.xaml
@@ -23,6 +23,7 @@
         ContentRendered="Window_ContentRendered"
         tb:FileDropBehavior.Command="{Binding FileDropCommand}"
         b:KeyReceiverBehavior.Receiver="{Binding KeyReceiver,Mode=OneWay}"
+        b:FullScreenBehavior.IsFullScreen="{Binding IsFullScreen.Value,Mode=OneWay}"
         Title="{Binding WindowTitle.Value}"
         Icon="/ShibugakiViewer;component/Assets/Icons/Folder(special-open)_5844.ico">
     <Window.DataContext>
